--- a/SRTAPUI/app/src/main/res/menu/navigation_menu.xml
+++ b/SRTAPUI/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
+        <item android:title="Add Fence"
+            android:id="@+id/fence_id"
+            android:icon="@drawable/ic_add_trip" />
         <item android:title="Notifications"
             android:id="@+id/notify_id"
             android:icon="@drawable/ic_notification" />
